WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267865
[iOS] [UIAsyncTextInput] WKWebView AutoFill input assistant item doesn't show up in the keyboard
https://bugs.webkit.org/show_bug.cgi?id=267865
Summary
[iOS] [UIAsyncTextInput] WKWebView AutoFill input assistant item doesn't show...
Wenson Hsieh
Reported
2024-01-22 10:29:52 PST
rdar://121160501
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-01-22 10:46:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23053
EWS
Comment 2
2024-01-22 13:32:29 PST
Committed
273316@main
(851a94731a2a): <
https://commits.webkit.org/273316@main
> Reviewed commits have been landed. Closing PR #23053 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug