Tools/TestWebKitAPI/Tests/ios/AutocorrectionTestsIOS.mm
@@ -259,18 +259,24 @@ TEST(AutocorrectionTests, AutocorrectionContextBeforeAndAfterEditing)
     EXPECT_TRUE(contextBeforeInsertingText.contextBeforeSelection.isEmpty());
     EXPECT_TRUE(contextBeforeInsertingText.selectedText.isEmpty());
     EXPECT_TRUE(contextBeforeInsertingText.contextAfterSelection.isEmpty());
+    EXPECT_TRUE(contextBeforeInsertingText.markedText.isNull());
+    EXPECT_TRUE(NSEqualRanges(contextBeforeInsertingText.selectedRangeInMarkedText, NSMakeRange(NSNotFound, 0)));
 
     [contentView insertText:@"hello"];
     auto contextAfterInsertingText = [webView autocorrectionContext];
     EXPECT_WK_STREQ("hello", contextAfterInsertingText.contextBeforeSelection);
     EXPECT_TRUE(contextAfterInsertingText.selectedText.isEmpty());
     EXPECT_TRUE(contextAfterInsertingText.contextAfterSelection.isEmpty());
+    EXPECT_TRUE(contextAfterInsertingText.markedText.isNull());
+    EXPECT_TRUE(NSEqualRanges(contextAfterInsertingText.selectedRangeInMarkedText, NSMakeRange(NSNotFound, 0)));
 
     [contentView selectAll:nil];
     auto contextAfterSelecting = [webView autocorrectionContext];
     EXPECT_TRUE(contextAfterSelecting.contextBeforeSelection.isEmpty());
     EXPECT_WK_STREQ("hello", contextAfterSelecting.selectedText);
     EXPECT_TRUE(contextAfterSelecting.contextAfterSelection.isEmpty());
+    EXPECT_TRUE(contextAfterSelecting.markedText.isNull());
+    EXPECT_TRUE(NSEqualRanges(contextAfterSelecting.selectedRangeInMarkedText, NSMakeRange(NSNotFound, 0)));
 }
 
 TEST(AutocorrectionTests, AvoidDeadlockWithGPUProcessCreationInEmptyView)
